--- a/src/_app.css
+++ b/src/_app.css
@@ -5,7 +5,7 @@
   --color-secondary: #eb5757;
   --color-gray-100: #bdbdbd;
   --color-gray-200: #828282;
-  --color-black: #333;
+  --color-black: rgb(12, 10, 10);
 
   --font-primary: "Montserrat", sans-serif;
   --font-secondary: "Raleway", sans-serif;
@@ -30,4 +30,17 @@ main {
   max-width: 720px;
   margin: 0 auto;
   padding: 0px 20px;
+}
+
+.footer-text {
+  color: #bdbdbd;
+  text-align: center;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 50px;
+}
+
+.footer-text span {
+  font-weight: 700;
+  color: #828282;
 }
